--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name"      : "pingnotify",
+  "name"        : "pingnotify",
   "version"     : "0.0.1",
-  "description"   : "",
-  "url"             : "https://github.com/ollu/pingnotify",
-  "main"      : "./bin",
-  "bin"             : { "devcycle": "./bin/notify" },
-  "directories"     : { "test": "./test", "bin": "./bin" },
+  "description" : "Ping host and get notification when host is online again via
+                   notification center.",
+  "url"         : "https://github.com/ollu/pingnotify",
+  "main"        : "./bin",
+  "bin"           : { "devcycle": "./bin/notify" },
+  "directories"   : { "test": "./test", "bin": "./bin" },
   "dependencies"  : {
             "node-notifier": ">=3.0.6",
             "commander": ">=2.2.0"
               },
   "repository"    : {
             "type": "git",
-            "url": "https://github.com/ollu"
+            "url" : "https://github.com/ollu"
               },
   "scripts"     : {
             "test": "./bin/notify -h"
