--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name"        : "pingnotify",
   "version"     : "0.0.1",
   "description" : "Ping host and get notification when host is online again via notification center.",
-  "url"         : "https://github.com/ollu/pingnotify",
+  "url"         : "https://github.com/ollu/",
   "main"        : "./bin",
   "bin"           : { "devcycle": "./bin/notify" },
   "directories"   : { "test": "./test", "bin": "./bin" },
@@ -12,7 +12,7 @@
               },
   "repository"    : {
             "type": "git",
-            "url" : "https://github.com/ollu"
+            "url" : "https://github.com/ollu/pingnotify"
               },
   "scripts"     : {
             "test": "./bin/notify -h"
